# WakeupLLM

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.rs  capabilities.json  deploy.ps1  main.rs  model-config.example.json  model-config.json  profile-selections.json  snapshot.ps1  test-models.py
